# readers-ientrance

./: .gitignore  README.md  pyproject.toml
src/readers_ientrance/: __init__.py  agm_reader.py  arc_reader.py  bruker_reader.py  dsc_reader.py  ntmdt_reader.py  spc_reader.py  ta_dsc_reader.py  thermal_reader.py  vsm_reader.py  wdf_reader.py
tests/: test_agm_reader.py  test_arc_reader.py  test_bruker_reader.py  test_dsc_reader.py  test_ntmdt_reader.py  test_spc_reader.py  test_ta_dsc_reader.py  test_thermal_reader.py  test_vsm_reader.py  test_wdf_reader.py
tests/data/: dummy_agm.txt  dummy_vsm.csv
