[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "readers-ientrance"
version = "0.1.0"
description = "Standalone external readers for iEntrance instruments"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0.0",
    "numpy",
    "pydantic>=2.0.0",
    "kaitaistruct>=0.11",
    "renishawWiRE",
    "spc_spectra"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff"
]